ARM Template/mainTemplate.json
{
  "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0001",
  "parameters": {
    "core": {
      "type": "object",
      "defaultValue": {
        "resourcePrefix": "eg",
        "templateToDeploy": {
          "vnet": true,
          "keyVault": true,
          "sfCluster": true,
          "apiManagement": true,
          "appGateway": true,
          "dnsZone": true,
          "sqlServer": true,
          "cosmosDb": true,
          "dataBricks": true
        }
      },
      "metadata": {
        "description": "Configuration settings that are common to all resources."
      }
    },
    "vnet": {
      "type": "object",
      "metadata": {
        "description": "First two segment of Virtual Network Address Space."
      }
    },
    "vpn": {
      "type": "object",
      "metadata": {
        "description": "First two segment of Virtual Network Address Space."
      }
    }
  },
  "variables": {
    // Common
    "locationMap": {
      "SouthCentralUS": {
        "Abbr": "sc",
        "Code": "scus",
        "Name": "South Central US"
      },
      "EastUS": {
        "Abbr": "es",
        "Code": "eastus",
        "Name": "East US"
      }
    },
    "locationObject": "[variables('locationMap')[resourceGroup().location]]",
    "azureRegionToControlPlaneIp": {
      "Central US": "23.101.152.95/32",
      "East US": "23.101.152.95/32",
      "East US 2": "23.101.152.95/32",
      "North Central US": "23.101.152.95/32",
      "South Central US": "40.83.178.242/32",
      "West Central US": "40.83.178.242/32",
      "West US": "40.83.178.242/32",
      "West US 2": "40.83.178.242/32"
    },
    "azureRegionToWebappIp": {
      "Central US": "40.70.58.221/32",
      "East US": "40.70.58.221/32",
      "East US 2": "40.70.58.221/32",
      "North Central US": "40.70.58.221/32",
      "South Central US": "40.118.174.12/32",
      "West Central US": "40.118.174.12/32",
      "West US": "40.118.174.12/32",
      "West US 2": "40.118.174.12/32"
    },
    "controlPlaneIp": "[variables('azureRegionToControlPlaneIp')[variables('locationObject').Name]]",
    "webappIp": "[variables('azureRegionToWebappIp')[variables('locationObject').Name]]",
    // Virtual Network
    "virtualNetworkName": "[concat(parameters('core').resourcePrefix, '-vnet-', parameters('core').environment, '-', variables('locationObject').Code)]",
    "vnetAddressSpace": "[concat(parameters('vnet').addressSpacePrefix, '.0.0/16')]",
    // Subnets
    "apimSubnetPrefix": "[concat(parameters('vnet').addressSpacePrefix, '.1.0/27')]",
    "appGatewaySubnetPrefix": "[concat(parameters('vnet').addressSpacePrefix, '.2.0/24')]",
    "databricksPrivateSubnetPrefix": "[concat(parameters('vnet').addressSpacePrefix, '.3.0/27')]",
    "databricksPublicSubnetPrefix": "[concat(parameters('vnet').addressSpacePrefix, '.4.0/24')]",
    "devopsSubnetPrefix": "[concat(parameters('vnet').addressSpacePrefix, '.5.0/26')]",
    "sfSubnetPrefix": "[concat(parameters('vnet').addressSpacePrefix, '.6.0/24')]",
    "vpnSubnetPrefix": "[concat(parameters('vnet').addressSpacePrefix, '.7.0/24')]",
    "apimSubnetName": "ApiManagementSubnet",
    "appGatewaySubnetName": "ApplicationGatewaySubnet",
    "databricksPrivateSubnetName": "DataBricksPrivateSubnet",
    "databricksPublicSubnetName": "DataBricksPublicSubnet",
    "devopsSubnetName": "DevOpsSubnet",
    "sfSubnetName": "ServiceFabricSubnet",
    "vpnSubnetName": "GatewaySubnet",
    // NSGs
    "apimNsgName": "[concat(parameters('core').resourcePrefix, '-apim-nsg-', parameters('core').environment, '-', variables('locationObject').Code)]",
    "devopsNsgName": "[concat(parameters('core').resourcePrefix, '-devops-nsg-', parameters('core').environment, '-', variables('locationObject').Code)]",
    "databricksNsgName": "[concat(parameters('core').resourcePrefix, '-databricks-nsg-', parameters('core').environment, '-', variables('locationObject').Code)]",
    "sfNsgName": "[concat(parameters('core').resourcePrefix, '-sf-nsg-', parameters('core').environment, '-', variables('locationObject').Code)]",
    // VPN
    "vpnSubnetID": "[concat(resourceId('Microsoft.Network/virtualNetworks',variables('virtualNetworkName')), '/subnets/', variables('vpnSubnetName'))]",
    "vpnName": "[concat(parameters('core').resourcePrefix, '-vpn-', parameters('core').environment, '-', variables('locationObject').Code)]",
    "vpnSku": "Basic",
    "vpnPublicIpAddressName": "[concat(parameters('core').resourcePrefix, '-vpn-ip-', parameters('core').environment, '-', variables('locationObject').Code)]",
    // KayVault
    "keyVaultName": "[concat(parameters('core').resourcePrefix, '-keyvault-', parameters('core').environment, '-', variables('locationObject').Code)]"
  },
  "resources": [
    {
      "condition": "[parameters('core').templateToDeploy.vnet]",
      "name": "virtualNetwork",
      "apiVersion": "2019-05-01",
      "type": "Microsoft.Resources/deployments",
      "properties": {
        "mode": "Incremental",
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0001",
          "resources": [
            {
              "apiVersion": "2018-12-01",
              "type": "Microsoft.Network/networkSecurityGroups",
              "name": "[variables('apimNsgName')]",
              "location": "[variables('locationObject').Name]",
              "dependsOn": [],
              "properties": {
                "securityRules": [
                  {
                    "name": "Client_communication_to_API_Management",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "80",
                      "sourceAddressPrefix": "VirtualNetwork",
                      "destinationAddressPrefix": "VirtualNetwork",
                      "access": "Allow",
                      "priority": 100,
                      "direction": "Inbound"
                    }
                  },
                  {
                    "name": "Secure_Client_communication_to_API_Management",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "443",
                      "sourceAddressPrefix": "VirtualNetwork",
                      "destinationAddressPrefix": "VirtualNetwork",
                      "access": "Allow",
                      "priority": 110,
                      "direction": "Inbound"
                    }
                  },
                  {
                    "name": "Management_endpoint_for_Azure_portal_and_Powershell",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "3443",
                      "sourceAddressPrefix": "ApiManagement",
                      "destinationAddressPrefix": "VirtualNetwork",
                      "access": "Allow",
                      "priority": 120,
                      "direction": "Inbound"
                    }
                  },
                  {
                    "name": "Dependency_on_Redis_Cache",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "6381-6383",
                      "sourceAddressPrefix": "VirtualNetwork",
                      "destinationAddressPrefix": "VirtualNetwork",
                      "access": "Allow",
                      "priority": 130,
                      "direction": "Inbound"
                    }
                  },
                  {
                    "name": "Dependency_on_Azure_SQL",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "1433",
                      "sourceAddressPrefix": "VirtualNetwork",
                      "destinationAddressPrefix": "Sql",
                      "access": "Allow",
                      "priority": 140,
                      "direction": "Outbound"
                    }
                  },
                  {
                    "name": "Dependency_for_Log_to_event_Hub_policy",
                    "properties": {
                      "protocol": "*",
                      "sourcePortRange": "*",
                      "destinationPortRange": "5671",
                      "sourceAddressPrefix": "VirtualNetwork",
                      "destinationAddressPrefix": "EventHub",
                      "access": "Allow",
                      "priority": 150,
                      "direction": "Outbound"
                    }
                  },
                  {
                    "name": "Dependency_on_Redis_Cache_outbound",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "6381-6383",
                      "sourceAddressPrefix": "VirtualNetwork",
                      "destinationAddressPrefix": "VirtualNetwork",
                      "access": "Allow",
                      "priority": 160,
                      "direction": "Outbound"
                    }
                  },
                  {
                    "name": "Dependency_on_Azure_File_Share_for_GIT",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "445",
                      "sourceAddressPrefix": "VirtualNetwork",
                      "destinationAddressPrefix": "Storage",
                      "access": "Allow",
                      "priority": 170,
                      "direction": "Outbound"
                    }
                  },
                  {
                    "name": "Azure_Infrastructure_Load_Balancer",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "*",
                      "sourceAddressPrefix": "AzureLoadBalancer",
                      "destinationAddressPrefix": "VirtualNetwork",
                      "access": "Allow",
                      "priority": 180,
                      "direction": "Inbound"
                    }
                  },
                  {
                    "name": "Publish_DiagnosticLogs_And_Metrics",
                    "properties": {
                      "description": "APIM Logs and Metrics for consumption by admins and your IT team are all part of the management plane",
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "sourceAddressPrefix": "VirtualNetwork",
                      "destinationAddressPrefix": "AzureMonitor",
                      "access": "Allow",
                      "priority": 185,
                      "direction": "Outbound",
                      "destinationPortRanges": [
                        "443",
                        "12000",
                        "1886"
                      ]
                    }
                  },
                  {
                    "name": "Connect_To_SMTP_Relay_For_SendingEmails",
                    "properties": {
                      "description": "APIM features the ability to generate email traffic as part of the data plane and the management plane",
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "sourceAddressPrefix": "VirtualNetwork",
                      "destinationAddressPrefix": "Internet",
                      "access": "Allow",
                      "priority": 190,
                      "direction": "Outbound",
                      "destinationPortRanges": [
                        "25",
                        "587",
                        "25028"
                      ]
                    }
                  },
                  {
                    "name": "Authenticate_To_Azure_Active_Directory",
                    "properties": {
                      "description": "Connect to Azure Active Directory for Developer Portal Authentication or for Oauth2 flow during any Proxy Authentication",
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "sourceAddressPrefix": "VirtualNetwork",
                      "destinationAddressPrefix": "AzureActiveDirectory",
                      "access": "Allow",
                      "priority": 200,
                      "direction": "Outbound",
                      "destinationPortRanges": [
                        "80",
                        "443"
                      ]
                    }
                  },
                  {
                    "name": "Dependency_on_Azure_Storage",
                    "properties": {
                      "description": "APIM service dependency on Azure Blob and Azure Table Storage",
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "443",
                      "sourceAddressPrefix": "VirtualNetwork",
                      "destinationAddressPrefix": "Storage",
                      "access": "Allow",
                      "priority": 100,
                      "direction": "Outbound"
                    }
                  },
                  {
                    "name": "Publish_Monitoring_Logs",
                    "properties": {
                      "protocol": "Tcp",
                      "sourcePortRange": "*",
                      "destinationPortRange": "443",
                      "sourceAddressPrefix": "VirtualNetwork",
                      "destinationAddressPrefix": "AzureCloud",
                      "access": "Allow",
                      "priority": 300,
                      "direction": "Outbound"
                    }
                  },
                  {
                    "name": "Deny_All_Internet_Outbound",
                    "properties": {
                      "protocol": "*",
                      "sourcePortRange": "*",
                      "destinationPortRange": "*",
                      "sourceAddressPrefix": "VirtualNetwork",
                      "destinationAddressPrefix": "Internet",
                      "access": "Deny",
                      "priority": 999,
                      "direction": "Outbound"
                    }
                  }
                ]
              },
              "tags": {
                "Scope": "EdGraph",
                "Type": "Infrastructure"
              }
            },
            {
              "apiVersion": "2018-12-01",
              "type": "Microsoft.Network/networkSecurityGroups",
              "name": "[variables('databricksNsgName')]",
              "location": "[variables('locationObject').Name]",
              "dependsOn": [],
              "properties": {
                "securityRules": [
                  {
                    "name": "databricks-worker-to-worker",
                    "properties": {
                      "access": "Allow",
                      "description": "Required for worker nodes communication within a cluster.",
                      "destinationAddressPrefix": "*",
                      "destinationPortRange": "*",
                      "direction": "Inbound",
                      "priority": 200,
                      "protocol": "*",
                      "sourceAddressPrefix": "VirtualNetwork",
                      "sourcePortRange": "*"
                    }
                  },
                  {
                    "name": "databricks-control-plane-ssh",
                    "properties": {
                      "access": "Allow",
                      "description": "Required for Databricks control plane management of worker nodes.",
                      "destinationAddressPrefix": "*",
                      "destinationPortRange": "22",
                      "direction": "Inbound",
                      "priority": 100,
                      "protocol": "*",
                      "sourceAddressPrefix": "[variables('controlPlaneIp')]",
                      "sourcePortRange": "*"
                    }
                  },
                  {
                    "name": "databricks-control-plane-worker-proxy",
                    "properties": {
                      "access": "Allow",
                      "description": "Required for Databricks control plane communication with worker nodes.",
                      "destinationAddressPrefix": "*",
                      "destinationPortRange": "5557",
                      "direction": "Inbound",
                      "priority": 110,
                      "protocol": "*",
                      "sourceAddressPrefix": "[variables('controlPlaneIp')]",
                      "sourcePortRange": "*"
                    }
                  },
                  {
                    "name": "databricks-worker-to-webapp",
                    "properties": {
                      "access": "Allow",
                      "description": "Required for workers communication with Databricks Webapp.",
                      "destinationAddressPrefix": "[variables('webappIp')]",
                      "destinationPortRange": "*",
                      "direction": "Outbound",
                      "priority": 100,
                      "protocol": "*",
                      "sourceAddressPrefix": "*",
                      "sourcePortRange": "*"
                    }
                  },
                  {
                    "name": "databricks-worker-to-sql",
                    "properties": {
                      "access": "Allow",
                      "description": "Required for workers communication with Azure SQL services.",
                      "destinationAddressPrefix": "Sql",
                      "destinationPortRange": "*",
                      "direction": "Outbound",
                      "priority": 110,
                      "protocol": "*",
                      "sourceAddressPrefix": "*",
                      "sourcePortRange": "*"
                    }
                  },
                  {
                    "name": "databricks-worker-to-storage",
                    "properties": {
                      "access": "Allow",
                      "description": "Required for workers communication with Azure Storage services.",
                      "destinationAddressPrefix": "Storage",
                      "destinationPortRange": "*",
                      "direction": "Outbound",
                      "priority": 120,
                      "protocol": "*",
                      "sourceAddressPrefix": "*",
                      "sourcePortRange": "*"
                    }
                  },
                  {
                    "name": "databricks-worker-to-worker-outbound",
                    "properties": {
                      "access": "Allow",
                      "description": "Required for worker nodes communication within a cluster.",
                      "destinationAddressPrefix": "VirtualNetwork",
                      "destinationPortRange": "*",
                      "direction": "Outbound",
                      "priority": 130,
                      "protocol": "*",
                      "sourceAddressPrefix": "*",
                      "sourcePortRange": "*"
                    }
                  },
                  {
                    "name": "databricks-worker-to-any",
                    "properties": {
                      "access": "Allow",
                      "description": "Required for worker nodes communication with any destination.",
                      "destinationAddressPrefix": "*",
                      "destinationPortRange": "*",
                      "direction": "Outbound",
                      "priority": 140,
                      "protocol": "*",
                      "sourceAddressPrefix": "*",
                      "sourcePortRange": "*"
                    }
                  }
                ]
              },
              "tags": {
                "Scope": "EdGraph",
                "Type": "Infrastructure"
              }
            },
            {
              "apiVersion": "2018-12-01",
              "type": "Microsoft.Network/networkSecurityGroups",
              "name": "[variables('devopsNsgName')]",
              "location": "[variables('locationObject').Name]",
              "dependsOn": [],
              "properties": {
                "securityRules": [
                ]
              },
              "tags": {
                "Scope": "EdGraph",
                "Type": "Infrastructure"
              }
            },
            {
              "apiVersion": "2018-12-01",
              "type": "Microsoft.Network/networkSecurityGroups",
              "name": "[variables('sfNsgName')]",
              "location": "[variables('locationObject').Name]",
              "dependsOn": [],
              "properties": {
                "securityRules": [
                ]
              },
              "tags": {
                "Scope": "EdGraph",
                "Type": "Infrastructure"
              }
            },
            {
              "apiVersion": "2018-12-01",
              "type": "Microsoft.Network/virtualNetworks",
              "name": "[variables('virtualNetworkName')]",
              "location": "[variables('locationObject').Name]",
              "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/',variables('apimNsgName'))]",
                "[concat('Microsoft.Network/networkSecurityGroups/',variables('sfNsgName'))]",
                "[concat('Microsoft.Network/networkSecurityGroups/',variables('devopsNsgName'))]",
                "[concat('Microsoft.Network/networkSecurityGroups/',variables('databricksNsgName'))]"
              ],
              "properties": {
                "addressSpace": {
                  "addressPrefixes": [
                    "[variables('vnetAddressSpace')]"
                  ]
                },
                "subnets": [
                  {
                    "name": "[variables('apimSubnetName')]",
                    "properties": {
                      "addressPrefix": "[variables('apimSubnetPrefix')]",
                      "networkSecurityGroup": {
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('apimNsgName'))]"
                      }
                    }
                  },
                  {
                    "name": "[variables('appGatewaySubnetName')]",
                    "properties": {
                      "addressPrefix": "[variables('appGatewaySubnetPrefix')]"
                    }
                  },
                  {
                    "name": "[variables('databricksPrivateSubnetName')]",
                    "properties": {
                      "addressPrefix": "[variables('databricksPrivateSubnetPrefix')]",
                      "networkSecurityGroup": {
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('databricksNsgName'))]"
                      },
                      "serviceEndpoints": [
                        {
                          "service": "Microsoft.Sql"
                        }
                      ]
                    }
                  },
                  {
                    "name": "[variables('databricksPublicSubnetName')]",
                    "properties": {
                      "addressPrefix": "[variables('databricksPublicSubnetPrefix')]",
                      "networkSecurityGroup": {
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('databricksNsgName'))]"
                      },
                      "serviceEndpoints": [
                        {
                          "service": "Microsoft.Sql"
                        }
                      ]
                    }
                  },
                  {
                    "name": "[variables('devopsSubnetName')]",
                    "properties": {
                      "addressPrefix": "[variables('devopsSubnetPrefix')]",
                      "networkSecurityGroup": {
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('devopsNsgName'))]"
                      },
                      "serviceEndpoints": [
                        {
                          "service": "Microsoft.Sql"
                        },
                        {
                          "service": "Microsoft.AzureCosmosDB"
                        }
                      ]
                    }
                  },
                  {
                    "name": "[variables('sfSubnetName')]",
                    "properties": {
                      "addressPrefix": "[variables('sfSubnetPrefix')]",
                      "networkSecurityGroup": {
                        "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('sfNsgName'))]"
                      },
                      "serviceEndpoints": [
                        {
                          "service": "Microsoft.Sql"
                        },
                        {
                          "service": "Microsoft.AzureCosmosDB"
                        }
                      ]
                    }
                  },
                  {
                    "name": "[variables('vpnSubnetName')]",
                    "properties": {
                      "addressPrefix": "[variables('vpnSubnetPrefix')]",
                      "serviceEndpoints": [
                        {
                          "service": "Microsoft.Sql"
                        },
                        {
                          "service": "Microsoft.AzureCosmosDB"
                        }
                      ]
                    }
                  }
                ]
              },
              "tags": {
                "Scope": "EdGraph",
                "Type": "Infrastructure"
              }
            },
            {
              "apiVersion": "2018-12-01",
              "type": "Microsoft.Network/publicIPAddresses",
              "name": "[variables('vpnPublicIpAddressName')]",
              "location": "[variables('locationObject').Name]",
              "properties": {
                "publicIPAllocationMethod": "Dynamic"
              },
              "tags": {
                "Scope": "EdGraph",
                "Type": "Infrastructure"
              }
            },
            {
              "apiVersion": "2018-12-01",
              "type": "Microsoft.Network/virtualNetworkGateways",
              "name": "[variables('vpnName')]",
              "location": "[variables('locationObject').Name]",
              "dependsOn": [
                "[concat('Microsoft.Network/virtualNetworks/', variables('virtualNetworkName'))]",
                "[concat('Microsoft.Network/publicIPAddresses/', variables('vpnPublicIpAddressName'))]"
              ],
              "properties": {
                "gatewayType": "Vpn",
                "ipConfigurations": [
                  {
                    "name": "default",
                    "properties": {
                      "privateIPAllocationMethod": "Dynamic",
                      "subnet": {
                        "id": "[variables('vpnSubnetID')]"
                      },
                      "publicIpAddress": {
                        "id": "[resourceId('Microsoft.Network/publicIPAddresses', variables('vpnPublicIpAddressName'))]"
                      }
                    }
                  }
                ],
                "vpnType": "RouteBased",
                "sku": {
                  "name": "[variables('vpnSku')]",
                  "tier": "[variables('vpnSku')]",
                  "capacity": 2
                },
                "enableBgp": false,
                "activeActive": false,
                "vpnClientConfiguration": {
                  "vpnClientAddressPool": {
                    "addressPrefixes": [
                      "172.16.201.0/24"
                    ]
                  },
                  "vpnClientProtocols": [
                    "SSTP"
                  ],
                  "vpnClientRootCertificates": [
                    {
                      "name": "[parameters('vpn').P2SRootCertName]",
                      "properties": {
                        "publicCertData": "[parameters('vpn').P2SRootCertDataPublicBase64]"
                      }
                    }
                  ],
                  "vpnClientRevokedCertificates": [],
                  "vpnClientIpsecPolicies": []
                }
              },
              "tags": {
                "Scope": "EdGraph",
                "Type": "Infrastructure"
              }
            }
          ]
        }
      }
    },
    {
      "condition": "[parameters('core').templateToDeploy.keyVault]",
      "name": "keyVault",
      "apiVersion": "2019-05-01",
      "type": "Microsoft.Resources/deployments",
      "properties": {
        "mode": "Incremental",
        "template": {
          "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
          "contentVersion": "1.0.0.0001",
          "resources": [
            {
              "type": "Microsoft.KeyVault/vaults",
              "name": "[variables('keyVaultName')]",
              "location": "[variables('locationObject').Name]",
              "apiVersion": "2018-02-14",
              "tags": {
                "displayName": "KeyVault"
              },
              "properties": {
                "enabledForDeployment": true,
                "enabledForTemplateDeployment": true,
                "tenantId": "[subscription().TenantId]",
                "accessPolicies": [
                  {
                    "objectId": "[parameters('core').aadAdminSecurityGroupObjectId]",
                    "tenantId": "[subscription().TenantId]",
                    "permissions": {
                      "secrets": [ "get", "list", "set", "delete", "backup", "restore", "recover", "purge" ],
                      "certificates": [ "get", "list", "delete", "create", "import", "update", "managecontacts", "getissuers", "listissuers", "setissuers", "deleteissuers", "manageissuers", "recover", "purge", "backup", "restore" ]
                    }
                  }
                ],
                "sku": {
                  "name": "standard",
                  "family": "A"
                },
                "networkAcls": {
                  "value": {
                    "defaultAction": "Allow",
                    "bypass": "AzureServices"
                  }
                }
              }
            }
          ]
        }
      }
    }
  ],
  "outputs": {
    "location": {
      "type": "object",
      "value": "[variables('locationObject')]"
    }
  }
}
